--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,11 +1,11 @@
-baseURL: 'https://evenlangas.github.io/djruben/'
-title: TailBliss
+baseURL: ''
+title: DJ Ruben
 languageCode: en-us
 DefaultContentLanguage: en
 enableEmoji: true
 enableGitInfo: true
 enableRobotsTXT: true
-canonifyURLs: false
+canonifyURLs: true
 paginate: 9
 darkmode_js:
   - assets/js/darkmode.js
@@ -46,21 +46,21 @@ markup:
       xhtml: false
 
 params:
-  author: Nusser Studios
+  author: Even Falkenberg Langås
   authorimage: ../assets/images/global/author.webp
-  og_image: /images/tailbliss-cover.png
-  moto: "Super Fast, and Flexible"
-  description: "A Hugo theme built with love, using TailwindCSS 3, Alpine.JS, and Hugo Pipes. Images are optimized for use with Hugo Pipes for WebP format."
+  og_image: /images/ruben2.png
+  moto: "Garantisten for feststemning"
+  description: "Jeg setter tonen for uforglemmelige øyeblikk. Fra klubber til bryllup og bedriftsevents, leverer jeg pulsøkende beats og stemningsfulle melodier. La oss skape musikalsk magi sammen!"
   disable_theme_toggle: false
   disable_stay_uptodate: false
 
   p1:
-    heading: "Our mission"
-    image: "images/pages/our-mission.png"
+    heading: "Om meg"
+    image: "images/pages/ruben4.png"
     content:
-      - text: "Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi. Cursus faucibus nunc nisl netus morbi vel porttitor vitae ut. Amet vitae fames senectus vitae."
-      - text: "Sollicitudin tristique eros erat odio sed vitae, consequat turpis elementum. Lorem nibh vel, eget pretium arcu vitae. Eros eu viverra donec ut volutpat donec laoreet quam urna. Sollicitudin tristique eroserat odio sed vitae, consequat turpis elementum. Lorem nibh vel, eget pretium arcu vitae. Eros eu viverra donec ut volutpat donec laoreet quam urna."
-      - text: "Rhoncus nisl, libero egestas diam fermentum dui. At quis tincidunt vel ultricies. Vulputate aliquet velit faucibus semper. Pellentesque in venenatis vestibulum consectetur nibh id. In id ut tempus egestas. Enim sit aliquam nec, a. Morbi enim fermentum lacus in. Viverra."
+      - text: "Jeg er en DJ fra Arendal med 9 års erfaring i ryggen. Løpet av min karriære har jeg spilt på nattklubber​,​ eventer​,​ bryllup og pubber over hele Norge. Jeg har varmet opp for større artister som Basshunter​,​ Italobrothers​,​ Tix​,​ Kamelen​,​ Dårlig vane​,​ kung skurk one​,​ El Papi​,​ Staysman og Lazz​,​ Meland x Hauken og Morgan Sulele for og nevne noen." 
+      - text: "Utleie av utstyr bla bla bla"
+      - text: "Ta kontakt for mer info."
   p2:
     heading: "Just in time for Hacktoberfest with JIT Tailwind."
     image: "images/pages/hacktoberfest.jpg"
@@ -112,74 +112,23 @@ params:
 
 menu:
   main:
-    - identifier: prose
-      name: Prose
-      url: /prose/
+    - identifier: produkter
+      name: Produkter
+      url: /produkter/
       weight: 10
-    - identifier: about
-      name: About
-      url: /about/
+    - identifier: kontaktmeg
+      name: Kontakt meg
+      url: /kontaktmeg/
       weight: 20
-    - identifier: categories
-      pre: dropdown
-      name: Categories
+    - identifier: ommeg
+      url: /ommeg/
+      name: Om meg
       weight: 30
-    - identifier: dropdown
-      pre: complexdropdown
-      name: Dropdown
-      weight: 40
-    - identifier: contact
-      name: Contact
-      url: /contact/
-      weight: 50
-  categories:
-    - identifier: prose
-      name: Prose
-      url: /prose/
-      weight: 10
-    - identifier: about
-      name: About
-      url: /about/
-      weight: 20
-  dropdown:
-    - identifier: appearance
-      pre: stars # can be stars, comments or piechart
-      name: Appearance
-      post: "Easy customization"
-      url: "#"
-      weight: 10
-    - identifier: comments
-      pre: comments # can be stars, comments or piechart
-      name: Comments
-      post: "Check your latest comments"
-      url: "#"
-      weight: 20
-    - identifier: analytics
-      pre: piechart # can be stars, comments or piechart
-      name: Analytics
-      post: "Take a look at your statistics"
-      url: "#"
-      weight: 30
+    
   footer:
-    - identifier: about
-      name: About
-      url: /about/
-      weight: 10
-    - identifier: blog
-      name: Blog
-      url: /categories/blog/
-      weight: 20
-    - identifier: news
-      name: News
-      url: /categories/news/
-      weight: 30
-    - identifier: prose
-      name: Prose
-      url: /prose/
-      weight: 40
-    - identifier: contact
-      name: Contact
-      url: /contact/
+    - identifier: kontaktmeg
+      name: Kontakt meg
+      url: /kontaktmeg
       weight: 50
 
 markup:
