--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,11 +1,11 @@
-baseURL: 'https://evenlangas.github.io/djruben/'
+baseURL: ''
 title: DJ Ruben
 languageCode: en-us
 DefaultContentLanguage: en
 enableEmoji: true
 enableGitInfo: true
 enableRobotsTXT: true
-canonifyURLs: false
+canonifyURLs: true
 paginate: 9
 darkmode_js:
   - assets/js/darkmode.js
@@ -58,14 +58,9 @@ params:
     heading: "Om meg"
     image: "images/pages/ruben4.png"
     content:
-      - text: "Jeg er en DJ fra Arendal med 9 års erfaring i ryggen. Løpet av min karriære har jeg spilt på nattklubber​,​ eventer​,​ bryllup og pubber over hele Norge. Jeg har varmet opp for større artister som Basshunter​,​ Italobrothers​,​ Tix​,​ Kamelen​,​ Dårlig vane​,​ kung skurk one​,​ El Papi​,​ Staysman og Lazz​,​ Meland x Hauken og Morgan Sulele for og nevne noen." 
-      - text: "Utleie av utstyr bla bla bla"
+      - text: "Jeg er en DJ fra Arendal med 9 års erfaring i ryggen. Løpet av min karriere har jeg spilt på nattklubber​,​ eventer​,​ bryllup og pubber over hele Norge. Jeg har varmet opp for større artister som Basshunter​,​ Italobrothers​,​ Tix​,​ Kamelen​,​ Dårlig vane​,​ kung skurk one​,​ El Papi​,​ Staysman og Lazz​,​ Meland x Hauken og Morgan Sulele for og nevne noen." 
+      - text: ""
       - text: "Ta kontakt for mer info."
-  p2:
-    heading: "Just in time for Hacktoberfest with JIT Tailwind."
-    image: "images/pages/hacktoberfest.jpg"
-    content:
-      - text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at purus non enim commodo tincidunt vel in nulla. Aenean pretium dolor non ultricies bibendum. Etiam quis blandit enim. Nunc condimentum ut lorem in faucibus. Phasellus varius ligula et commodo tristique. Nunc sodales nisl nec laoreet vehicula. Donec velit nibh, sollicitudin at nulla a, egestas dignissim eros. Sed lacinia hendrerit interdum. Vestibulum pellentesque sem venenatis nisl tempor accumsan sit amet tempus felis. Mauris leo diam, porttitor nec bibendum id, tempus ac nulla. Etiam congue ornare erat at convallis. Donec in nisi dapibus, mattis risus vel, imperdiet enim. Donec fermentum sit amet tortor nec tincidunt. Nam nec lectus tortor. Nunc sit amet laoreet orci, porta ornare massa. Phasellus eget lorem mi. Nam eleifend ultricies sapien, quis mollis leo bibendum at. Quisque viverra lorem sit amet magna aliquet, et dignissim arcu eleifend."
   p3:
     heading: "Backed by world-renowned investors"
     content:
