--- a/hugo.yaml
+++ b/hugo.yaml
@@ -58,7 +58,7 @@ params:
     heading: "Om meg"
     image: "images/pages/ruben4.png"
     content:
-      - text: "Jeg er en DJ fra Arendal med 9 års erfaring i ryggen. Løpet av min karriere har jeg spilt på nattklubber​,​ eventer​,​ bryllup og pubber over hele Norge. Jeg har varmet opp for større artister som Basshunter​,​ Italobrothers​,​ Tix​,​ Kamelen​,​ Dårlig vane​,​ kung skurk one​,​ El Papi​,​ Staysman og Lazz​,​ Meland x Hauken og Morgan Sulele for og nevne noen." 
+      - text: "Jeg er en DJ fra Arendal med 9 års erfaring i ryggen. I løpet av min karriere har jeg spilt på nattklubber​,​ eventer​,​ bryllup og pubber over hele Norge. Jeg har varmet opp for større artister som Basshunter​,​ Italobrothers​,​ Tix​,​ Kamelen​,​ Dårlig vane​,​ King Skurk One,​ El Papi​,​ Staysman og Lazz​,​ Meland x Hauken og Morgan Sulele for og nevne noen." 
       - text: ""
       - text: ""
   p3:
