Update booking link to Rubens form

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -109,7 +109,7 @@ menu:
   main:
     - identifier: booknaa
       name: Book nå
-      url: https://tally.so/r/w2P2YV
+      url: https://tally.so/r/mDV4eN
       weight: 10
     
   footer:
